MCDT-227 : fixing tooltip behind courses

--- a/src/main/resources/public/sass/global/specifics/_diary.scss
+++ b/src/main/resources/public/sass/global/specifics/_diary.scss
@@ -215,5 +215,5 @@ span.no-style {
 }
 
 .tooltip{
-  z-index: 0;
+  z-index: 90000;
 }
